# DMLP

./: CMakeLists.txt  IActivationFunction.cpp  IActivationFunction.h  Layer.cpp  Layer.h  Makefile  MultiLayerPerceptron.cpp  MultiLayerPerceptron.h  Node.cpp  Node.h  ProcessingUnit.h  Trainer.cpp  Trainer.h  common.h  main.cpp
